[package]
name = "txd-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
thiserror = "1.0.37"
chrono = "0.4.23"
log = "0.4"
ta = "0.5.0"
rust_decimal = "1.27.0"
rust_decimal_macros = "1.27"
